<resources>
    <string name="app_name">al-manara</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="TeacherName">Ahmed Ali</string>
    <string name="CourseName">Animals Vol.1</string>
    <string name="CourseDescription">Course Description</string>
    <string name="CourseDescriptionBody">Learn about animals </string>
    <string name="prefs_theme_key">theme</string>

    <string name="signin">Sign in</string>
    <string name="guest">Guest</string>
    <string name="register">Create account</string>
    <string name="password">Password</string>
    <string name="name">Enter your name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="topics_description">Topics</string>
    <string name="enroll">Enroll</string>
    <string name="title_activity_main4">Courses</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="title_activity_child_courses">ChildCourses</string>
    <string name="my_courses">My Courses</string>
    <string name="featured_courses">Courses</string>
    <string name="sign_out">Sign out</string>
    <string name="Sign_up" translatable="false">Sign up</string>
    <string name="Email">Email</string>
    <string name="enter_url">Enter Url</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="support">support</string>
    <string name="no_course">Press add for new course</string>
    <string name="no_lesson">press + to add more lessons</string>
    <string name="no_topics" translatable="false">Press + for more topics</string>
    <string name="no_mycourse" translatable="false">you have no enrolled courses</string>
    <string name="sign_in_here">  Sign in here</string>
    <string name="have_an_account">Have an account?</string>
    <string name="create_account">Create account</string>
    <string name="upload_your_profile_picture">Upload your profile picture</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="not_have_an_account">New here?</string>
    <string name="sign_up_here">  sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_email_to_sign_in_to_your_account">Enter your email to sign in to your account</string>
    <string name="Instructor">Instructor</string>
    <string name="Student">Student</string>
    <string name="Parents">Parents</string>
    <string name="instructor">Instructor :</string>
    <string name="Courses">Courses</string>
    <string name="smart_easy_efficient">Smart .. Easy .. Efficient</string>
    <string name="image">Image</string>
    <string name="sound">Sound</string>
    <string name="question">Question</string>
    <string name="text">text</string>
    <string name="submit">submit</string>
    <string name="courses">Courses</string>
    <string name="select_text_color">Select Text Color :</string>
    <string name="open_color_picker">Open color picker</string>
    <string name="select_text_size">Select Text Size:</string>
    <string name="select_color">Select Color :</string>
    <string name="enter_question">Enter question :</string>
    <string name="ok">OK</string>
    <string name="choose_image">Choose image</string>
    <string name="cancel">Cancel</string>
    <string name="file_uploaded">File Uploaded</string>
    <string name="choose_que_type">Choose type :</string>
    <string name="cancel_or_comple_data">Cancel or Complete fields</string>
    <string name="complete_data">Please insert answer</string>
    <string name="select_sound_file">Select sound file</string>
    <string name="sound_btn_text">Sound button text</string>
    <string name="start">Start</string>
    <string name="word">Word</string>
    <string name="select_text_language">Select Text Language :</string>
    <string name="enter_text">Enter text :</string>
    <string name="answer">Answer</string>
    <string name="check">Check</string>
    <string name="animation">Animation</string>
    <string name="on_click">On Click</string>
    <string name="preview">Preview</string>
    <string name="end">End</string>
    <string name="iam_here">iam here</string>
    <string name="android">android</string>
    <string name="course_name">Course Name</string>
    <string name="course_descriptions">Course descriptionS</string>
    <string name="subject">Subject</string>
    <string name="audio_link">Audio Link</string>
    <string name="hi">hi</string>
    <string name="lesson_name">Lesson name:</string>
    <string name="upload_lesson_photo">Upload Lesson Photo</string>
    <string name="textview">TextView</string>
    <string name="answer_1">Answer 1</string>
    <string name="color_question">Color Question</string>
    <string name="speech">Speech</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="images_multiple_choice">Images Multiple Choice</string>
    <string name="text_detection">Text Detection</string>
    <string name="elmanara_app">Elmanara App</string>
    <string name="all_rights_reserved_2017">All Rights Reserved 2017</string>
    <string name="edit_course">Edit Course</string>
    <string name="preview_classroom">Preview Classroom</string>
    <string name="sea">Sea</string>
    <string name="enter_email">Enter email</string>
    <string name="message">    This Child is not in Our DataBase ,Please Check if the email entered is correct</string>
    <string name="chooseanOption"> Choose an Option</string>
    <string name="enrollMyChild"> Enroll My Child into Course </string>
    <string name="viewThisChild">View This Child\'s Progress</string>
    <string name="addCourse">Add Course</string>
    <string name="matching">Matching</string>
    <string name="progress">Progress</string>


    <string-array name="color_array" translatable="false">
        <item>Red</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Green</item>
        <item>Cyan</item>
        <item>Blue</item>
        <item>Violet</item>
    </string-array>
    <string-array name="text_size_array" translatable="false">
        <item>Button 14sp CAPS</item>
        <item>Caption 12sp</item>
        <item>Body1 14sp</item>
        <item>Body2 14sp Bold</item>
        <item>Subheading 16sp</item>
        <item>Title 20sp</item>
        <item>Headline 24sp</item>
        <item>Display1 34sp</item>
        <item>Display2 45sp</item>
        <item>Display3 56sp</item>
        <item>Display4 112sp</item>

    </string-array>
    <string-array name="text_lan_array" translatable="false">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Efficent">Efficent</string>
    <string name="Smart">Smart</string>
    <string name="Easy">Easy</string>
    <string name="audio_recording_error">Audio recording error</string>
    <string name="client_error">Client side error</string>
    <string name="permision">Insufficient permissions</string>
    <string name="network_error">Network error</string>
    <string name="network_timeout">Network timeout</string>
    <string name="no_match">No match</string>
    <string name="rconize_serivce">RecognitionService busy</string>
    <string name="error_form_server">error from server</string>
    <string name="no_speech_input">No speech input</string>
    <string name="try_again">Didn\'t understand, please try again.</string>
    <string name="text_detection_question">Find This Word </string>
    <string name="you_click">"You Clicked "</string>
    <string name="id_null">ID Null</string>
    <string name="failure_to_load">Failed to load post.</string>
    <string name="connect_from">"Connected From "</string>
    <string name="animal_vlaue1">Animals Vol. 1</string>
    <string name="sign_in">successfully registered</string>
    <string name="sign_in_correct">Sign in</string>
    <string name="good">Good</string>
    <string name="enter_word">Enter word </string>
    <string name="choose_kind">Choose type :</string>
    <string name="on_move">on Move</string>
    <string name="on_swiped">"on Swiped "</string>
    <string name="lesson_title">Lesson title</string>
    <string name="anwan_7sa">Topic title</string>
    <string name="on_double_click">ON Double Tap</string>
    <string name="wrong">Wrong Username Or Password</string>
    <string name="no_internet">Internet Connection Not Available</string>
    <string name="register_register">Registered Successfully , Logging In</string>
    <string name="password_success">Password is less than 6 characters</string>
    <string name="email_wrong">Email is Either not Created or Doesn\'t Exist</string>
    <string name="no_internerts">Internet Connection Not Available</string>
    <string name="no_matchs">Passwords didn\'t match</string>
    <string name="dont_match">Doesn\'t Match.</string>
    <string name="require">Required</string>
    <string name="please">Please download the colors app</string>
    <string name="download">تحميل</string>
    <string name="pleasee">Please download the alphabits app </string>
    <string name="yaaaaaaaaaaay">YAAAAAayyyyyyyyyy</string>
    <string name="pleasee_swip">Swipe Right To See All The Topics</string>
    <string name="correct">Result Correct</string>
    <string name="wrongw">Result Wrong</string>
    <string name="in_correct">Result Incorrect</string>
    <string name="ondowload">on download</string>
    <string name="registering">Registering user ...</string>
    <string name="delete_alert">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="singinnow">جاري تسجيل الدخول...</string>
    <string name="Animation">Animation</string>
    <string name="easiest">اسهل طريقة للتعلم من المنزل</string>
    <string name="efficiency">متابعة اطفالك اكثر فاعلية الان</string>
    <string name="smartest">تحضير درسك ليس اذكي من الان</string>
    <string name="parent">parent</string>

</resources>
