<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/coursesNav"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_courses" />
        <item
            android:id="@+id/featuredCoursesNaV"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/featured_courses" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->


    </group>
    <group>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/settings" />
        <item
            android:id="@+id/signout"

            android:title="@string/sign_out" />
    </group>

</menu>
