<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lenovo.myapplication.MainActivity"
    android:background="@drawable/a4"
    android:clickable="true">


    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/Register"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="65dp"
        android:layout_height="100dp"
        android:id="@+id/Signin"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        android:text="@string/signin"
        android:layout_alignTop="@+id/Register"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="65dp"
        android:layout_height="100dp"
        android:id="@+id/Guest"
        android:layout_gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/guest" />


</RelativeLayout>
