<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ali.homeschool.controller.activities.MainActivity"
    android:clickable="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonslayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:id="@+id/Signin"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            android:text="@string/signin"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:id="@+id/Register"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            android:text="@string/register"

            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:id="@+id/Guest"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            android:text="@string/guest"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/a4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:text="@string/home_welcome_msg_h1"
        android:layout_above="@+id/buttonslayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp" />


</RelativeLayout>
