<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.ali.homeschool.childProgress.ChildCourses">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>

        </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--<LinearLayout-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/activity_course_description"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical"-->
        <!--tools:context="com.example.ali.homeschool.descriptionActivity.CourseDescriptionActivity">-->

        <!--<android.support.v7.widget.Toolbar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:theme="?attr/actionBarTheme"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--tools:layout_editor_absoluteX="8dp"-->
        <!--android:id="@+id/toolbar1"-->
        <!--/>-->
        <RelativeLayout
            android:id="@+id/activity_course_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            tools:context="com.example.ali.homeschool.descriptionActivity.CourseDescriptionActivity">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/earlymath"/>



            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/TeacherName"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/CourseName"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ratingBar"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/ratingValue"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:text="@string/CourseDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView4"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/CourseDescriptionBody"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="150dp">-->

            <!--</LinearLayout>-->

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/topics_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listViewDes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView6"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:scrollbarSize="2dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            <Button
                android:id="@+id/enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView2"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:text="Enroll"
                android:background="@color/colorAccent"/>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
